[package]
name = "tock"
version = "0.1.0"
edition = "2024"

[dependencies]
longport = "^1.1"
tokio = { version = "^1.43", features = ["rt-multi-thread"] }
time = "^0.3.0"
rust_decimal = "^1.36.0"
crossterm = "^0.28.0"
config = "^0.15.0"
serde = { version = "^1.0.0", features = ["derive"] }
#serde_yaml = "^0.9.0"
async-trait = "0.1.88"
